--- a/001-doing-it.Rmd
+++ b/001-doing-it.Rmd
@@ -377,10 +377,11 @@ we have about 5 times greater logl-ratios.  OK.
 
 # Thinning is part of the Snakefile...
 
-I did it for various levels: `cov=[1.0, 0.1, 0.05, 0.01, 0.005, 0.001]` and for
-now for only one rep with:
+I did it for various levels: `cov=[1.0, 0.1, 0.05, 0.01, 0.005, 0.001]` and initially
+for only one rep, but then I did it for reps 1--5, with:
 ```sh
 snakemake -p --use-conda --profile hpcc-profiles/slurm/sedna
 ```
+
 
 
