--- a/001-doing-it.Rmd
+++ b/001-doing-it.Rmd
@@ -501,7 +501,9 @@ for_plot <- ready_to_go %>%
 
 ggplot(for_plot, aes(y = samp_name_f, x = logl_to_correct_pop, fill = cov)) + 
   geom_point(shape = 21) +
-  scale_x_continuous(trans = scales::pseudo_log_trans(sigma = 1, base = 10), breaks = c(-5, -3, 0, 2, 5, 10, 25, 50, 100, 500, 2000, 5000, 50000))
+  scale_x_continuous(trans = scales::pseudo_log_trans(sigma = 1, base = 10), breaks = c(-5, -3, 0, 2, 5, 10, 25, 50, 100, 500, 2000, 5000, 50000)) +
+  xlab("Log (base e) likelihood ratio for assignment to correct population") +
+  ylab("Population: Sample_ID (original depth)")
 ```
 
 When I plotted that I realized that I needed to add 0.5X.  So I made that change in the
